--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,12 @@
-<header class="bar-header">
-    <a id="menu">
-        <svg id="open" class="icon-menu"><use xlink:href="#icon-menu"></use></svg>
-    </a>
-    <a id="search" class="dosearch">
-        <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
-    </a>
-    <h1 class="logo">
-        <a href="{{ site.baseurl }}/">
-            لاگـــــــــز
-        </a>
-    </h1>
+<header >
+<div style="background-color:black" class="jumbotron bg-cover text-white">
+    <div class="container py-5 text-center">
+        <h1 class="display-4 font-weight-bold">لاگـــــــــز</h1>
+        <p class="font-italic mb-0">معرفی گروه های کاربری لینوکس و نرم‌افزارهای آزاد در سطح کشور</p>
+        
+    </div>
+</div>      
 </header>
 
-<div id="mask" class="overlay"></div>
 
-{% include menu.html %}
-{% include search.html %}
+
