--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,113 +5,109 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/WebPage">
     {% include head.html %}
-    <body class="main-page has-push-menu">
+    {% include header.html %}
+    <body class="main-page">
         {% include svg-icons.html %}
-        
-        <nav class="navbar">
-            {% include header.html %}
-        </nav>
-        <div class="jumbotron text-center">
-                <h1>لاگـــــــــــــــــــــــز</h1>
-                <p>معرفی گروه های کاربری لینوکس و نرم‌افزارهای آزاد در سطح کشور</p> 
-                </div>
-                
-                <section class="content">
-                    <div class="container-fluid">     
-                            <div class="row">
-                                {% for post in site.posts %}
-                                {% if post.category == "لاگ" %}
-                                <div class="col-lg-2" >
-                                    <article class="box-item" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-                                        <div class="box-body">
-                                            {% if post.image %}
-                                                <div class="cover">
-                                                    
-                                                    <a href="{{ post.url | prepend: site.baseurl }}" {%if isnewpost %}class="new-post"{% endif %}>
-                                                        <img src="{{ post.image }}" data-url="{{ post.image }}">
-                                                    </a>
-                                                </div>
-                                                {% else %}
-                                                    <img src="/assets/img/linux-logo.png" alt="لوگو لاگ" class="post-cover"> 
-                                                {% endif %}
-                                            <div class="box-info">
-                                                <meta itemprop="datePublished" content="{{ post.date | date_to_xmlschema }}">
-                                                <time itemprop="datePublished" datetime="{{ post.date | date_to_xmlschema }}" class="date">
-                                                    {% include date.html date=post.date %}
-                                                </time>
-                                                <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
-                                                    <h2 class="post-title" itemprop="name">
-                                                        {{ post.title }}
-                                                    </h2>
-                                                </a>
-                                                <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
-                                                    <p class="description">{{ post.introduction }}</p>
-                                                </a>
-                                                <div class="tags">
-                                                    {% for tag in post.tags %}
-                                                        <a href="{{ site.baseurl}}/tags/#{{tag | slugify }}">{{ tag }}</a>
-                                                    {% endfor %}
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </article> 
-                    
-                                </div>
-                                    {% endif %}
-                                {% endfor %}
-                        </div>
-                    </div>  
-                   
+        <section class="content">
 
-
-                        <div class="row">
-                            {% for post in site.posts %}
-                            {% if post.category == "foss" %}
-                            <div class="col-lg-2" >
-                                <article class="box-item" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-                                    <div class="box-body">
-                                        {% if post.image %}
-                                            <div class="cover">
-                                                
-                                                <a href="{{ post.url | prepend: site.baseurl }}" {%if isnewpost %}class="new-post"{% endif %}>
-                                                    <img src="{{ post.image }}" data-url="{{ post.image }}">
-                                                </a>
-                                            </div>
-                                            {% else %}
+            <div class="container-fluid bg-1">     
+                    <div class="row">
+                        {% for post in site.posts %}
+                        {% if post.category == "لاگ" %}
+                        <div class="col-lg-2" >
+                            <article class="box-item" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
+                                <div class="box-body">
+                                    {% if post.image %}
+                                        
+                                            <a href="{{ post.url | prepend: site.baseurl }}" {%if isnewpost %}class="new-post"{% endif %}>
+                                                <img src="{{ post.image }}" data-url="{{ post.image }}">
+                                            </a>
+                                        
+                                        {% else %}
+                                        
+                                            <a href="{{ post.url | prepend: site.baseurl }}" {%if isnewpost %}class="new-post"{% endif %}>
                                                 <img src="/assets/img/linux-logo.png" alt="لوگو لاگ" class="post-cover"> 
-                                            {% endif %}
-                                        <div class="box-info">
-                                            <meta itemprop="datePublished" content="{{ post.date | date_to_xmlschema }}">
-                                            <time itemprop="datePublished" datetime="{{ post.date | date_to_xmlschema }}" class="date">
-                                                {% include date.html date=post.date %}
-                                            </time>
-                                            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
-                                                <h2 class="post-title" itemprop="name">
-                                                    {{ post.title }}
-                                                </h2>
                                             </a>
-                                            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
-                                                <p class="description">{{ post.introduction }}</p>
-                                            </a>
-                                            <div class="tags">
-                                                {% for tag in post.tags %}
-                                                    <a href="{{ site.baseurl}}/tags/#{{tag | slugify }}">{{ tag }}</a>
-                                                {% endfor %}
-                                            </div>
+                                        
+                                        {% endif %}
+                                    <div class="box-info">
+                                        <meta itemprop="datePublished" content="{{ post.date | date_to_xmlschema }}">
+                                        <time itemprop="datePublished" datetime="{{ post.date | date_to_xmlschema }}" class="date">
+                                            {% include date.html date=post.date %}
+                                        </time>
+                                        <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
+                                            <h2 class="post-title" itemprop="name">
+                                                {{ post.title }}
+                                            </h2>
+                                        </a>
+                                        <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
+                                            <p class="description">{{ post.introduction }}</p>
+                                        </a>
+                                        <div class="tags">
+                                            {% for tag in post.tags %}
+                                                <a href="{{ site.baseurl}}/tags/#{{tag | slugify }}">{{ tag }}</a>
+                                            {% endfor %}
                                         </div>
                                     </div>
-                                </article> 
+                                </div>
+                            </article> 
             
-                            </div>
+                        </div>
                             {% endif %}
                         {% endfor %}
-                        </div>
+                </div>
+            </div>  
+            
+
+            <div class="container-fluid bg-2">
+                <div class="row ">
+                    {% for post in site.posts %}
+                    {% if post.category == "foss" %}
+                    <div class="col-lg-2" >
+                        <article class="box-item" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
+                            <div class="box-body">
+                                {% if post.image %}
+                                    
+                                        
+                                        <a href="{{ post.url | prepend: site.baseurl }}" {%if isnewpost %}class="new-post"{% endif %}>
+                                            <img src="{{ post.image }}" data-url="{{ post.image }}">
+                                        </a>
+                                    
+                                    {% else %}
+                                        <img src="/assets/img/linux-logo.png" alt="لوگو لاگ" class="post-cover"> 
+                                    {% endif %}
+                                <div class="box-info">
+                                    <meta itemprop="datePublished" content="{{ post.date | date_to_xmlschema }}">
+                                    <time itemprop="datePublished" datetime="{{ post.date | date_to_xmlschema }}" class="date">
+                                        {% include date.html date=post.date %}
+                                    </time>
+                                    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
+                                        <h2 class="post-title" itemprop="name">
+                                            {{ post.title }}
+                                        </h2>
+                                    </a>
+                                    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
+                                        <p class="description">{{ post.introduction }}</p>
+                                    </a>
+                                    <div class="tags">
+                                        {% for tag in post.tags %}
+                                            <a href="{{ site.baseurl}}/tags/#{{tag | slugify }}">{{ tag }}</a>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                        </article> 
+    
                     </div>
-                  
-                        
-                    
+                    {% endif %}
+                {% endfor %}
+                </div>
+            </div>
+            
                 
-            </section>
+            
+        
+    </section>
         {% include footer.html %}
 
     </body>
