--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,11 +21,7 @@ html{
     -ms-text-size-adjust:100%;
     -webkit-text-size-adjust:100%
 }
-body{
-    margin:0;
-    font-family:sahel;
-    direction: rtl;
-}
+
 article,aside,footer,header,nav,section{
     display:block
 }
@@ -731,8 +727,9 @@ main{
     color:#fff
 }
 .box-item .box-body img{
-    width:100%;
-    height:auto;
+    border-radius: 50%;
+    width:250px;
+    height:250px;
     margin:0 auto;
     -webkit-transition:all .2s ease-in-out;
     transition:all .2s ease-in-out
@@ -1669,3 +1666,35 @@ Add this css for responsive embedded videos in your .css file. */
 
 
 .h_iframe-aparat_embed_frame{position:relative;} .h_iframe-aparat_embed_frame .ratio {display:block;width:100%;height:auto;} .h_iframe-aparat_embed_frame iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
+
+
+  body {
+    font-family:sahel;
+    direction: rtl;
+    color: #f5f6f7;
+  }
+
+  .bg-1 { 
+    background-color: #1abc9c; /* Green */
+    color: #ffffff;
+  }
+  .bg-2 { 
+    background-color: #474e5d; /* Dark Blue */
+    color: #ffffff;
+  }
+  .bg-3 { 
+    background-color: #ffffff; /* White */
+    color: #555555;
+  }
+  .bg-4 { 
+    background-color: #2f2f2f; /* Black Gray */
+    color: #fff;
+  }
+  .bg-5 { 
+    background-color: #000000; /* Black */
+    color: #a82c47;
+  }
+  .container-fluid {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
